fixed sidebar on mobile

--- a/static/stylesheets/dashboard.css
+++ b/static/stylesheets/dashboard.css
@@ -27,9 +27,7 @@
     width:37px;
 }
 
-.icon-orig-nav {
-/*    margin-top: 10px !important;*/
-}
+
 
 #db-container {
     margin: auto;
