--- a/static/stylesheets/landingPage.css
+++ b/static/stylesheets/landingPage.css
@@ -216,7 +216,7 @@ video {
 
 @media only screen and (min-width : 1500px) {
     #index-banner {
-    background: url('../images/banner.jpg') no-repeat 50% 100%;
+/*    background: url('../images/banner.jpg') no-repeat 50% 100%;*/
     padding: 20px;
     background-size: cover;
     padding-bottom: 295px;
@@ -258,6 +258,13 @@ video {
 .lp-subtext {
 /*    position: absolute;*/
     color:#727272;
+}
+
+
+@media only screen and (max-width : 600px) {
+    .lp-subtext{
+        margin-top: 75px !important;
+    }
 }
 
 .image-overlay{
